<resources>
    <string name="app_name">Pratica_02</string>

    <string name="in_email_hint">E-mail</string>
    <string name="in_senha_hint">Senha</string>
    <string name="bt_enviar">Enviar</string>
    <string name="bt_salvar">Salvar</string>
    <string name="bt_entrar">Entrar</string>

    <!-- Strings de Menu -->
    <string name="acao_pesquisar">Pesquisar</string>
    <string name="acao_configurar">Configurações</string>
    <string name="acao_sair">Sair</string>
    <string name="acao_nova_arvore">Nova Árvore</string>

    <!-- Activities -->
    <string name="title_activity_map">MapActivity</string>
    <string name="bt_cancelar_nova_fruta">Cancelar</string>
    <string name="bt_salvar_nova_fruta">Salvar</string>

    <!-- Lista de frutas -->
    <string-array name="futas_array">
        <item>Manga</item>
        <item>Jaca</item>
        <item>Goiaba</item>
        <item>Jambo</item>
    </string-array>

    <string-array name="estado_de_produção">
        <item>Sem frutos ou flores</item>
        <item>Com flores</item>
        <item>Com frutos verdes</item>
        <item>Com frutos maduros</item>
    </string-array>

    <string-array name="facilidade_de_colheita">
        <item>Difícil</item>
        <item>Fácil</item>
    </string-array>

    <string-array name="local">
        <item>Público</item>
        <item>Privado</item>
    </string-array>

</resources>
