<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="barlapp.pratica_02.MapActivity">

    <item
        android:id="@+id/acao_pesquisar"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/acao_pesquisar"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/acao_nova_arvore"
          android:title="@string/acao_nova_arvore"
          android:onClick="barlapp.pratica_02.MapActivity.novaArvore"
          app:showAsAction="never"/>

    <item android:id="@+id/acao_configurar"
          android:title="@string/acao_configurar"
          app:showAsAction="never"/>

    <item android:id="@+id/acao_sair"
          android:title="@string/acao_sair"
          app:showAsAction="never"/>

</menu>
