<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="barlapp.pratica_02.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="125dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/titulo_app"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="Fruit Go"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="48dp"
            android:textAlignment="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/in_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/in_email_hint"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/in_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/in_senha_hint"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_entrar"
            android:layout_gravity="center"
            android:onClick="entrar"/>

    </LinearLayout>

</LinearLayout>
